fix: totalGold의 sticky 가 사라져서 global의 overflow-x 삭제

--- a/app/globals.css
+++ b/app/globals.css
@@ -5,7 +5,6 @@ body {
   min-height: 100vh; /* Ensure body can expand */
   display: flex;
   flex-direction: column;
-  overflow-x: hidden;
 }
 
 * {
